syntax = "proto3";

option csharp_namespace = "PostsBLL.Grpc.Protos";

package posts;

service PostService {
  rpc GetPostWithVotes (PostRequest) returns (PostResponse);
}

message PostRequest {
  int32 post_id = 1;
}

message PostResponse {
  Post post = 1;
}

message PostVote {
  int32 id = 1;
  int32 user_id = 2;
  int32 vote_type = 3;
}

message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 user_id = 4;
  repeated PostVote votes = 5;
}